added font-family and ended write html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -39,8 +45,11 @@
       <section class="hero">
         <div class="container">
           <div class="hero-info">
-            <h1 class="hero-title">Awesome tools for Designer & Developer.</h1>
-            <p class="hero-subtitle">
+            <h1 class="hero-title">
+              Awesome tools for Designer & Developer
+              <span class="hero-dot">.</span>
+            </h1>
+            <p class="hero-text">
               Antool is a web collection of information on paid or free Design
               and Development tools
             </p>
@@ -73,6 +82,366 @@
           </div>
         </div>
       </section>
+      <section class="tools">
+        <div class="container">
+          <h2 class="tools-title">Most Popular Tools</h2>
+          <p class="tools-subtitle">
+            Tools for the best Designers and Developers most popularly used in
+            the world
+          </p>
+          <div class="tools-cards">
+            <!-- ======================1====================== -->
+            <article class="tools-card">
+              <div class="tool-icon">
+                <img
+                  src="./src/img/icon/figma.svg"
+                  alt="figma"
+                  class="tool-img"
+                />
+              </div>
+              <h3 class="tool-name">FIGMA</h3>
+              <p class="tool-availability">Free</p>
+              <p class="tool-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+              <div class="tool-card-acctions">
+                <button class="tool-button"></button>
+                <button class="tool-button"></button>
+                <a class="tool-link" href="https://www.figma.com/">Visit</a>
+              </div>
+            </article>
+            <!-- ======================2====================== -->
+            <article class="tools-card">
+              <div class="tool-icon">
+                <img
+                  src="./src/img/icon/sketch.svg"
+                  alt="sketch"
+                  class="tool-img"
+                />
+              </div>
+              <h3 class="tool-name">Sketch</h3>
+              <p class="tool-availability">Trial & Paid</p>
+              <p class="tool-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+              <div class="tool-card-acctions">
+                <button class="tool-button"></button>
+                <button class="tool-button"></button>
+                <a class="tool-link" href="https://www.sketch.com/">Visit</a>
+              </div>
+            </article>
+            <!-- ======================3====================== -->
+            <article class="tools-card">
+              <div class="tool-icon">
+                <img
+                  src="./src/img/icon/vs.svg"
+                  alt="vs-code"
+                  class="tool-img"
+                />
+              </div>
+              <h3 class="tool-name">Visual Studio Code</h3>
+              <p class="tool-availability">Free</p>
+              <p class="tool-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+              <div class="tool-card-acctions">
+                <button class="tool-button"></button>
+                <button class="tool-button"></button>
+                <a class="tool-link" href="https://code.visualstudio.com/"
+                  >Visit</a
+                >
+              </div>
+            </article>
+            <!-- ======================4====================== -->
+            <article class="tools-card">
+              <div class="tool-icon">
+                <img
+                  src="./src/img/icon/notion.webp"
+                  alt="notion"
+                  class="tool-img"
+                />
+              </div>
+              <h3 class="tool-name">Notion</h3>
+              <p class="tool-availability">Free & Paid</p>
+              <p class="tool-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+              <div class="tool-card-acctions">
+                <button class="tool-button"></button>
+                <button class="tool-button"></button>
+                <a class="tool-link" href="https://www.notion.so/">Visit</a>
+              </div>
+            </article>
+            <!-- ======================5====================== -->
+            <article class="tools-card">
+              <div class="tool-icon">
+                <img
+                  src="./src/img/icon/slack-colored.svg"
+                  alt="slack"
+                  class="tool-img"
+                />
+              </div>
+              <h3 class="tool-name">Slack</h3>
+              <p class="tool-availability">Free & Paid</p>
+              <p class="tool-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+              <div class="tool-card-acctions">
+                <button class="tool-button"></button>
+                <button class="tool-button"></button>
+                <a class="tool-link" href="https://slack.com/">Visit</a>
+              </div>
+            </article>
+            <!-- ======================6====================== -->
+            <article class="tools-card">
+              <div class="tool-icon">
+                <img
+                  src="./src/img/icon/invision.svg"
+                  alt="invision"
+                  class="tool-img"
+                />
+              </div>
+              <h3 class="tool-name">Invision</h3>
+              <p class="tool-availability">Free & Paid</p>
+              <p class="tool-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+              <div class="tool-card-acctions">
+                <button class="tool-button"></button>
+                <button class="tool-button"></button>
+                <a class="tool-link" href="https://www.invisionapp.com/"
+                  >Visit</a
+                >
+              </div>
+            </article>
+          </div>
+          <a class="tools-link">Load more</a>
+        </div>
+      </section>
+      <section class="brands">
+        <div class="container">
+          <h2 class="brands-title">Trusted more than 150+ brand</h2>
+          <div class="brands-photo">
+            <img
+              src="./src/img/icon/microsoft.svg"
+              alt="microsoft"
+              class="brand-img"
+            />
+          </div>
+          <div class="brands-photo">
+            <img
+              src="./src/img/icon/google.svg"
+              alt="google"
+              class="brand-img"
+            />
+          </div>
+          <div class="brands-photo">
+            <img src="./src/img/icon/slack.svg" alt="slack" class="brand-img" />
+          </div>
+          <div class="brands-photo">
+            <img
+              src="./src/img/icon/wordpress.svg"
+              alt="wordpress"
+              class="brand-img"
+            />
+          </div>
+        </div>
+      </section>
+      <section class="newcomer">
+        <div class="container">
+          <div class="newcomer-info">
+            <h2 class="info-title">Newcomer Tools</h2>
+            <p class="info-text">
+              Wow! see the latest update of the most recommended tools from
+              reliable designers and developers
+            </p>
+            <button class="info-button">Explore more</button>
+          </div>
+          <div class="newcomer-apps">
+            <!-- =======================1==================== -->
+            <article class="apps-card">
+              <div class="app-icon">
+                <img
+                  src="./src/img/icon/zeplin.webp"
+                  alt="zeplin"
+                  class="app-img"
+                />
+              </div>
+              <h3 class="app-name">Zeplin</h3>
+              <p class="app-availability">Free & Paid</p>
+              <p class="app-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+              <div class="app-card-acctions">
+                <button class="app-button"></button>
+                <button class="app-button"></button>
+                <a class="app-link" href="https://zeplin.io/">Visit</a>
+              </div>
+            </article>
+            <!-- =======================2==================== -->
+            <article class="apps-card">
+              <div class="app-icon">
+                <img
+                  src="./src/img/icon/phpstorm.webp"
+                  alt="phpstorm"
+                  class="app-img"
+                />
+              </div>
+              <h3 class="app-name">PHPStorm</h3>
+              <p class="app-availability">Free</p>
+              <p class="app-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+              <div class="app-card-acctions">
+                <button class="app-button"></button>
+                <button class="app-button"></button>
+                <a
+                  class="app-link"
+                  href="https://www.jetbrains.com/ru-ru/phpstorm/"
+                  >Visit</a
+                >
+              </div>
+            </article>
+            <!-- =======================3==================== -->
+            <article class="apps-card">
+              <div class="app-icon">
+                <img
+                  src="./src/img/icon/toolbox.webp"
+                  alt="toolbox"
+                  class="app-img"
+                />
+              </div>
+              <h3 class="app-name">Toolbox</h3>
+              <p class="app-availability">Free</p>
+              <p class="app-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+              <div class="app-card-acctions">
+                <button class="app-button"></button>
+                <button class="app-button"></button>
+                <a
+                  class="app-link"
+                  href="https://www.jetbrains.com/ru-ru/lp/toolbox/"
+                  >Visit</a
+                >
+              </div>
+            </article>
+            <!-- =======================4==================== -->
+            <article class="apps-card">
+              <div class="app-icon">
+                <img
+                  src="./src/img/icon/procreate.webp"
+                  alt="procreate"
+                  class="app-img"
+                />
+              </div>
+              <h3 class="app-name">Procreate</h3>
+              <p class="app-availability">Paid</p>
+              <p class="app-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+              <div class="app-card-acctions">
+                <button class="app-button"></button>
+                <button class="app-button"></button>
+                <a class="app-link" href="https://procreate.com/">Visit</a>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
+      <section class="teammate">
+        <div class="container">
+          <div class="teammate-info">
+            <h2 class="teammate-name">Ronald Richards</h2>
+            <p class="teammate-role">Product Manager</p>
+          </div>
+          <div class="teammate-photo">
+            <img
+              src="./src/img/main/ronald-richards.webp"
+              alt="ronald richards"
+              class="teammate-img"
+            />
+          </div>
+          <p class="teammate-text">
+            Incididunt cillum do sint sint enim ullamco id deserunt mollit qui
+            reprehenderit do. Velit ex tempor cillum ad sint occaecat. Do nulla
+            velit labore occaecat do deserunt Lorem magna officia incididunt
+            consectetur amet. Sunt consectetur veniam minim ex commodo sint non.
+            Occaecat aute officia excepteur non laboris id qui ad.
+          </p>
+        </div>
+      </section>
+      <section class="join">
+        <div class="container">
+          <h2 class="join-title">Become a contributor?</h2>
+          <p class="join-text">
+            Join us and get tips & tricks to become a great Designer and
+            Developer
+          </p>
+        </div>
+        <form action="#" class="join-form">
+          <input
+            class="join-input"
+            type="email"
+            placeholder="Enter your email..."
+          />
+          <button class="join-button">Join Us</button>
+        </form>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <a href="./index.html" class="logo-link"
+          ><img
+            src="./src/img/logo/footer_logo.svg"
+            alt="footer-logo"
+            class="logo-img"
+        /></a>
+        <p class="footer-copyright">Copyright 2021. Antools</p>
+        <p class="footer-text">
+          Antool is a web collection of information on paid or free Design and
+          Development tools
+        </p>
+      </div>
+      <div class="footer-contact">
+        <h3 class="contact-title">Contact Us</h3>
+        <ul class="contact-list">
+          <li class="contact-item">
+            <a class="contact-link" href="tel:+621987463"></a>
+          </li>
+          <li class="contact-item">
+            <address class="contact-address">M Building, No.10 A</address>
+          </li>
+          <li class="contact-item">
+            <a href="mailto:antools@awesome.com">antools@awesome.com</a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer-categories">
+        <h3 class="categories-title">Categories</h3>
+        <ul class="categories-list">
+          <li class="categoties-item">
+            <a href="#" class="categories-link">Design</a>
+          </li>
+          <li class="categoties-item">
+            <a href="#" class="categories-link">Development</a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer-company">
+        <h3 class="company-title">Company Info</h3>
+        <ul class="company-list">
+          <li class="company-item">
+            <a href="#" class="company-link">About Us</a>
+          </li>
+          <li class="company-item">
+            <a href="#" class="company-link">Our Partners</a>
+          </li>
+          <li class="company-item">
+            <a href="#" class="company-link">Blog</a>
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
