--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <a href="#" class="logo">
           <img src="./src/img/logo/logo.svg" alt="logo" class="logo-img" />
         </a>
@@ -350,29 +350,34 @@
         </div>
       </section>
       <section class="teammate">
-        <div class="container">
-          <div class="teammate-info">
+        <div class="container teammate-container">
+          <div class="teammate-card">
             <h2 class="teammate-name">Ronald Richards</h2>
             <p class="teammate-role">Product Manager</p>
           </div>
-          <div class="teammate-photo">
-            <img
-              src="./src/img/main/ronald-richards.webp"
-              alt="ronald richards"
-              class="teammate-img"
-            />
+          <div class="teammate-info">
+            <div class="teammate-photo">
+              <img
+                src="./src/img/main/ronald-richards.webp"
+                alt="ronald richards"
+                class="teammate-img"
+              />
+            </div>
+            <div class="about-teammate">
+              <p class="teammate-text">
+                Incididunt cillum do sint sint enim ullamco id deserunt mollit
+                qui reprehenderit do. Velit ex tempor cillum ad sint occaecat.
+                Do nulla velit labore occaecat do deserunt Lorem magna officia
+                incididunt consectetur amet. Sunt consectetur veniam minim ex
+                commodo sint non. Occaecat aute officia excepteur non laboris id
+                qui ad.
+              </p>
+            </div>
           </div>
-          <p class="teammate-text">
-            Incididunt cillum do sint sint enim ullamco id deserunt mollit qui
-            reprehenderit do. Velit ex tempor cillum ad sint occaecat. Do nulla
-            velit labore occaecat do deserunt Lorem magna officia incididunt
-            consectetur amet. Sunt consectetur veniam minim ex commodo sint non.
-            Occaecat aute officia excepteur non laboris id qui ad.
-          </p>
         </div>
       </section>
       <section class="join">
-        <div class="container">
+        <div class="container join-container">
           <h2 class="join-title">Become a contributor?</h2>
           <p class="join-text">
             Join us and get tips & tricks to become a great Designer and
@@ -402,7 +407,6 @@
           Antool is a web collection of information on paid or free Design and
           Development tools
         </p>
-
         <div class="footer-contact">
           <h3 class="contact-title">Contact Us</h3>
           <ul class="contact-list">
