try styled tools

--- a/index.html
+++ b/index.html
@@ -99,8 +99,10 @@
                   class="tool-img"
                 />
               </div>
-              <h3 class="tool-name">FIGMA</h3>
-              <p class="tool-availability">Free</p>
+              <div class="tool-info">
+                <h3 class="tool-name">FIGMA</h3>
+                <p class="tool-availability">Free</p>
+              </div>
               <p class="tool-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </p>
@@ -119,8 +121,10 @@
                   class="tool-img"
                 />
               </div>
-              <h3 class="tool-name">Sketch</h3>
-              <p class="tool-availability">Trial & Paid</p>
+              <div class="tool-info">
+                <h3 class="tool-name">Sketch</h3>
+                <p class="tool-availability">Trial & Paid</p>
+              </div>
               <p class="tool-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </p>
@@ -139,8 +143,11 @@
                   class="tool-img"
                 />
               </div>
-              <h3 class="tool-name">Visual Studio Code</h3>
-              <p class="tool-availability">Free</p>
+              <div class="tool-info">
+                <h3 class="tool-name">Visual Studio Code</h3>
+                <p class="tool-availability">Free</p>
+              </div>
+
               <p class="tool-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </p>
@@ -161,8 +168,11 @@
                   class="tool-img"
                 />
               </div>
-              <h3 class="tool-name">Notion</h3>
-              <p class="tool-availability">Free & Paid</p>
+              <div class="tool-info">
+                <h3 class="tool-name">Notion</h3>
+                <p class="tool-availability">Free & Paid</p>
+              </div>
+
               <p class="tool-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </p>
@@ -181,8 +191,11 @@
                   class="tool-img"
                 />
               </div>
-              <h3 class="tool-name">Slack</h3>
-              <p class="tool-availability">Free & Paid</p>
+              <div class="tool-info">
+                <h3 class="tool-name">Slack</h3>
+                <p class="tool-availability">Free & Paid</p>
+              </div>
+
               <p class="tool-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </p>
@@ -201,8 +214,11 @@
                   class="tool-img"
                 />
               </div>
-              <h3 class="tool-name">Invision</h3>
-              <p class="tool-availability">Free & Paid</p>
+              <div class="tool-info">
+                <h3 class="tool-name">Invision</h3>
+                <p class="tool-availability">Free & Paid</p>
+              </div>
+
               <p class="tool-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </p>
