some styled sections newcomer, brands and ended styled section tools

--- a/index.html
+++ b/index.html
@@ -231,40 +231,48 @@
               </div>
             </article>
           </div>
-          <a class="tools-link">Load more</a>
+          <div class="tools-button">
+            <a class="tools-link">Load more</a>
+          </div>
         </div>
       </section>
       <section class="brands">
-        <div class="container">
+        <div class="container brands-container">
           <h2 class="brands-title">Trusted more than 150+ brand</h2>
           <div class="brands-photo">
-            <img
-              src="./src/img/icon/microsoft.svg"
-              alt="microsoft"
-              class="brand-img"
-            />
-          </div>
-          <div class="brands-photo">
-            <img
-              src="./src/img/icon/google.svg"
-              alt="google"
-              class="brand-img"
-            />
-          </div>
-          <div class="brands-photo">
-            <img src="./src/img/icon/slack.svg" alt="slack" class="brand-img" />
-          </div>
-          <div class="brands-photo">
-            <img
-              src="./src/img/icon/wordpress.svg"
-              alt="wordpress"
-              class="brand-img"
-            />
+            <div class="brand-photo">
+              <img
+                src="./src/img/icon/microsoft.svg"
+                alt="microsoft"
+                class="brand-img"
+              />
+            </div>
+            <div class="brand-photo">
+              <img
+                src="./src/img/icon/google.svg"
+                alt="google"
+                class="brand-img"
+              />
+            </div>
+            <div class="brand-photo">
+              <img
+                src="./src/img/icon/slack.svg"
+                alt="slack"
+                class="brand-img"
+              />
+            </div>
+            <div class="brand-photo">
+              <img
+                src="./src/img/icon/wordpress.svg"
+                alt="wordpress"
+                class="brand-img"
+              />
+            </div>
           </div>
         </div>
       </section>
       <section class="newcomer">
-        <div class="container">
+        <div class="container newcomer-container">
           <div class="newcomer-info">
             <h2 class="info-title">Newcomer Tools</h2>
             <p class="info-text">
