finished styled cards

--- a/index.html
+++ b/index.html
@@ -107,8 +107,10 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </p>
               <div class="tool-card-acctions">
-                <button class="tool-button"></button>
-                <button class="tool-button"></button>
+                <div class="tool-input-acctions">
+                  <input type="checkbox" class="tool-checkbox" />
+                  <input type="checkbox" class="tool-checkbox" />
+                </div>
                 <a class="tool-link" href="https://www.figma.com/">Visit</a>
               </div>
             </article>
@@ -129,8 +131,10 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </p>
               <div class="tool-card-acctions">
-                <button class="tool-button"></button>
-                <button class="tool-button"></button>
+                <div class="tool-input-acctions">
+                  <input type="checkbox" class="tool-checkbox" />
+                  <input type="checkbox" class="tool-checkbox" />
+                </div>
                 <a class="tool-link" href="https://www.sketch.com/">Visit</a>
               </div>
             </article>
@@ -152,8 +156,10 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </p>
               <div class="tool-card-acctions">
-                <button class="tool-button"></button>
-                <button class="tool-button"></button>
+                <div class="tool-input-acctions">
+                  <input type="checkbox" class="tool-checkbox" />
+                  <input type="checkbox" class="tool-checkbox" />
+                </div>
                 <a class="tool-link" href="https://code.visualstudio.com/"
                   >Visit</a
                 >
@@ -177,8 +183,10 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </p>
               <div class="tool-card-acctions">
-                <button class="tool-button"></button>
-                <button class="tool-button"></button>
+                <div class="tool-input-acctions">
+                  <input type="checkbox" class="tool-checkbox" />
+                  <input type="checkbox" class="tool-checkbox" />
+                </div>
                 <a class="tool-link" href="https://www.notion.so/">Visit</a>
               </div>
             </article>
@@ -200,8 +208,10 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </p>
               <div class="tool-card-acctions">
-                <button class="tool-button"></button>
-                <button class="tool-button"></button>
+                <div class="tool-input-acctions">
+                  <input type="checkbox" class="tool-checkbox" />
+                  <input type="checkbox" class="tool-checkbox" />
+                </div>
                 <a class="tool-link" href="https://slack.com/">Visit</a>
               </div>
             </article>
@@ -223,8 +233,10 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </p>
               <div class="tool-card-acctions">
-                <button class="tool-button"></button>
-                <button class="tool-button"></button>
+                <div class="tool-input-acctions">
+                  <input type="checkbox" class="tool-checkbox" />
+                  <input type="checkbox" class="tool-checkbox" />
+                </div>
                 <a class="tool-link" href="https://www.invisionapp.com/"
                   >Visit</a
                 >
@@ -297,8 +309,10 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </p>
               <div class="app-card-acctions">
-                <button class="app-button"></button>
-                <button class="app-button"></button>
+                <div class="input-acctions">
+                  <input type="checkbox" class="app-checkbox" />
+                  <input type="checkbox" class="app-checkbox" />
+                </div>
                 <a class="app-link" href="https://zeplin.io/">Visit</a>
               </div>
             </article>
@@ -317,8 +331,10 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </p>
               <div class="app-card-acctions">
-                <button class="app-button"></button>
-                <button class="app-button"></button>
+                <div class="input-acctions">
+                  <input type="checkbox" class="app-checkbox" />
+                  <input type="checkbox" class="app-checkbox" />
+                </div>
                 <a
                   class="app-link"
                   href="https://www.jetbrains.com/ru-ru/phpstorm/"
@@ -341,8 +357,10 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </p>
               <div class="app-card-acctions">
-                <button class="app-button"></button>
-                <button class="app-button"></button>
+                <div class="input-acctions">
+                  <input type="checkbox" class="app-checkbox" />
+                  <input type="checkbox" class="app-checkbox" />
+                </div>
                 <a
                   class="app-link"
                   href="https://www.jetbrains.com/ru-ru/lp/toolbox/"
@@ -365,8 +383,10 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </p>
               <div class="app-card-acctions">
-                <button class="app-button"></button>
-                <button class="app-button"></button>
+                <div class="input-acctions">
+                  <input type="checkbox" class="app-checkbox" />
+                  <input type="checkbox" class="app-checkbox" />
+                </div>
                 <a class="app-link" href="https://procreate.com/">Visit</a>
               </div>
             </article>
