finished styled antools

--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
               and Development tools
             </p>
             <form action="#" class="hero-form">
+              <div class="icon-form">
+                <img
+                  src="./src/img/icon/search.svg"
+                  alt="icon"
+                  class="icon-img"
+                />
+              </div>
               <input
                 class="form-input"
                 type="text"
@@ -439,23 +446,25 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="logo-link"
-          ><img
-            src="./src/img/logo/footer_logo.svg"
-            alt="footer-logo"
-            class="logo-img"
-        /></a>
-        <p class="footer-copyright">Copyright 2021. Antools</p>
-        <p class="footer-text">
-          Antool is a web collection of information on paid or free Design and
-          Development tools
-        </p>
+      <div class="container footer-container">
+        <div class="footer-info">
+          <a href="./index.html" class="logo-link"
+            ><img
+              src="./src/img/logo/footer_logo.svg"
+              alt="footer-logo"
+              class="logo-img"
+          /></a>
+          <p class="footer-copyright">Copyright 2021. Antools</p>
+          <p class="footer-text">
+            Antool is a web collection of information on paid or free Design and
+            Development tools
+          </p>
+        </div>
         <div class="footer-contact">
           <h3 class="contact-title">Contact Us</h3>
           <ul class="contact-list">
             <li class="contact-item">
-              <a class="contact-link" href="tel:+621987463"></a>
+              <a class="contact-link" href="tel:+621987463">+621987463</a>
             </li>
             <li class="contact-item">
               <address class="contact-address">M Building, No.10 A</address>
@@ -468,10 +477,10 @@
         <div class="footer-categories">
           <h3 class="categories-title">Categories</h3>
           <ul class="categories-list">
-            <li class="categoties-item">
+            <li class="categories-item">
               <a href="#" class="categories-link">Design</a>
             </li>
-            <li class="categoties-item">
+            <li class="categories-item">
               <a href="#" class="categories-link">Development</a>
             </li>
           </ul>
